Fix: Header z-index

--- a/css/header.css
+++ b/css/header.css
@@ -8,6 +8,7 @@
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 2;
 
   background: var(--bg-secondary-color);
   background-blend-mode: multiply;
@@ -37,10 +38,6 @@
 }
 
 @media (max-width: 600px) {
-  .header {
-    z-index: 2;
-  }
-
   .logo {
     width: 30px;
   }
